# AmaExecutionCore

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backtest-dataset-refresh.yml  backtest-live.yml  backtest-regression.yml  deploy.yml  docker.yml  frontend.yml  quality.yml  tests.yml
alembic/: env.py
alembic/versions/: 1f0d8a9b2c3d_add_trade_events_table.py  2b7c9f4a1d22_add_signal_submissions_table.py  2c6d4b7a8e91_add_hard_loss_streak_pause_reason.py  4b5f6a7c8d9e_add_spot_protection_order_fields.py  64a8d6d9f0c4_add_safety_state_and_close_order_fields.py  7c97b214b1fc_merge_diverged_heads.py  8e73b1f2a6c4_fix_opened_closed_at_timezone.py  9a1c2d3e4f5a_add_scalping_symbol_stats_and_indexes.py  a3f8c2b4d1e9_add_admin_tables.py  a6f2c8d9e1b4_add_grid_engine_tables.py  d6aa3d3f9521_make_grid_slot_order_ids_unique.py  df98e4f6725a_add_daily_stats_and_system_events_tables.py  e19af1b96316_add_signals_and_trades_tables.py
backend/: __init__.py  config.py  database.py  main.py  task_utils.py
backend/admin/: auth.py  backtest_reports.py  data_router.py  deps.py  models.py  router.py  stats.py  ws_logs.py
backend/api/: grid_router.py
backend/backtest/: __init__.py  datasets.py  demo_runner.py  gate.py  metrics.py  replay_runner.py  shadow_runner.py  simulation_execution_service.py
backend/bybit_client/: __init__.py  exceptions.py  rest.py
backend/exchange_sync/: __init__.py  engine.py  listener.py
backend/grid_engine/: grid_advisor.py  grid_backtester.py  grid_config.py  grid_metrics.py  grid_runner.py  grid_state.py  grid_ws_handler.py  models.py  order_manager.py
backend/market_data/: __init__.py  bybit_spot.py  bybit_ws_feed.py  contracts.py  intervals.py  staleness.py
backend/order_executor/: __init__.py  executor.py  idempotency.py
backend/position_manager/: __init__.py  router.py  schemas.py  service.py
backend/risk_manager/: __init__.py  calculator.py  exceptions.py
backend/safety_guard/: __init__.py  circuit_breaker.py  exceptions.py  kill_switch.py  router.py
backend/signal_execution/: __init__.py  idempotency.py  router.py  schemas.py  service.py
backend/signal_loop/: __init__.py  runner.py  ws_runner.py
backend/strategy_engine/: __init__.py  bb_squeeze_strategy.py  breakout_strategy.py  contracts.py  ema_crossover.py  ema_pullback_strategy.py  factory.py  htf_trend_filter.py  orchestrator.py  regime_detector.py  relative_strength_orchestrator.py  rsi_divergence_strategy.py  rsi_ema_spot_v2_strategy.py  rsi_ema_strategy.py  service.py  ts_momentum_strategy.py  vwap_reversion_strategy.py  vwap_reversion_v2.py
backend/trade_journal/: __init__.py  models.py  store.py
docs/: README.md  api.md  architecture.md  configuration.md  database.md
docs/en/: README.md  backtest.md  configuration.md  https-setup.md  understanding_the_system.md
docs/ru/: README.md  api.md  architecture.md  backtest.md  configuration.md  database.md  understanding_the_system.md
docs/todos/: day-trading-roadmap.md  grid-engine-roadmap.md  rsi-ema-spot-v2-validation.md  runtime-profiles-roadmap.md  scalping-roadmap.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
nginx/: nginx.conf  nginx.conf.template
scripts/: __init__.py  backtest_gate.py  cancel_session8_orders.py  check_wallet.py  check_xrp.py  context_gen.py  create_admin.py  deposit_sim.py  generate_admin_jwt_secret.py  grid_parameter_sweep.py  import_rules.py  refresh_backtest_dataset.py  rsi_ema_sweep.py  run_backtest.py  run_strategy_backtests.py  sell_xrp_market.py  setup_https.sh  validate_15m.py  validate_breakout.py  validate_grid_backtest.py  validate_stage_a.py  validate_stage_b.py  validate_stage_c.py  validate_strategy.py  validate_ts_momentum.py
scripts/fixtures/: backtest_manifest.json  backtest_smoke.json  grid_sweep_results.json
tests/: conftest.py
tests/admin/: test_auth.py  test_data_router.py  test_router.py  test_stats.py  test_ws_logs.py
tests/api/: test_grid_router.py  test_position_router.py  test_router_branches.py  test_signal_execution.py
tests/backtest/: test_datasets.py  test_demo_runner.py  test_gate.py  test_gate_suite_resolution.py  test_historical_replay_runner.py  test_metrics.py  test_replay_context.py  test_replay_reporting.py  test_replay_runner.py  test_shadow_pipeline_integration.py  test_shadow_runner.py  test_simulation_execution_service.py
tests/bybit_client/: test_rest.py
tests/config/: test_config.py
tests/demo/: conftest.py  test_testnet_flow.py
tests/exchange_sync/: test_engine.py  test_listener.py  test_reconciliation.py
tests/grid_engine/: test_grid_advisor.py  test_grid_backtester.py  test_grid_models.py  test_grid_runner.py  test_grid_runner_risk.py  test_grid_ws_handler.py  test_order_manager.py
tests/main/: test_day_trading_lifespan.py  test_lifespan.py  test_misc.py  test_tasks.py
tests/market_data/: test_bybit_spot_snapshot_provider.py  test_bybit_ws_feed.py
tests/order_executor/: test_executor.py
tests/position_manager/: test_service.py
tests/postgresql/: conftest.py  test_alembic_persistence.py  test_api_postgresql.py
tests/risk_manager/: __init__.py  test_calculator.py
tests/safety_guard/: test_guard_state.py  test_kill_switch_cancel.py
tests/scripts/: __init__.py  test_backtest_gate.py  test_generate_admin_jwt_secret.py  test_import_rules.py  test_run_backtest_cli.py  test_run_strategy_backtests.py
tests/signal_loop/: test_runner.py  test_ws_runner.py
tests/strategy_engine/: test_bb_squeeze_strategy.py  test_breakout_strategy.py  test_ema_crossover.py  test_ema_pullback.py  test_htf_trend_filter.py  test_regime_detector.py  test_relative_strength_orchestrator.py  (+9 more)
tmp_outputs/: research-backtest-regression.json  strategy-backtests-btcusdt-90d.json
(+38 files in other folders)
