[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amaexecutioncore"
version = "0.1.0"
description = "Trading Bot — Мастер-план проекта для Bybit Spot"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "ama", email = "amalsdev367@gmail.com"},
]
maintainers = [
    {name = "ama", email = "amalsdev367@gmail.com"},
]
keywords = ["trading", "bot", "bybit", "fastapi", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Exchange API & WebSocket
    "pybit>=5.8.0",
    "websockets>=13.0",
    
    # Database
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    
    # Utilities
    "loguru>=0.7.2"
]
[project.urls]
Homepage = "https://github.com/AmaLS367/AmaExecutionCore"
Documentation = "https://github.com/AmaLS367/AmaExecutionCore"
Repository = "https://github.com/AmaLS367/AmaExecutionCore.git"
Issues = "https://github.com/AmaLS367/AmaExecutionCore/issues"

[project.scripts]
start = "uvicorn backend.main:app --reload"
backtest = "python scripts/run_backtest.py"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "mypy>=1.11.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "testnet: tests that require explicit Bybit testnet credentials and live services",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "S101", "PLR0913", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
exclude = ["tests/.*", "alembic/.*"]
