[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amaexecutioncore"
version = "0.1.0"
description = "Trading Bot — Мастер-план проекта для Bybit Spot"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "ama", email = "amalsdev367@gmail.com"},
]
maintainers = [
    {name = "ama", email = "amalsdev367@gmail.com"},
]
keywords = ["trading", "bot", "bybit", "fastapi", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Exchange API & WebSocket
    "pybit>=5.8.0",
    "websockets>=13.0",
    
    # Database
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    
    # Utilities
    "loguru>=0.7.2"
]
[project.urls]
Homepage = "https://github.com/AmaLS367/AmaExecutionCore"
Documentation = "https://github.com/AmaLS367/AmaExecutionCore"
Repository = "https://github.com/AmaLS367/AmaExecutionCore.git"
Issues = "https://github.com/AmaLS367/AmaExecutionCore/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "mypy>=1.11.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "testnet: tests that require explicit Bybit testnet credentials and live services",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = [
    "E501",
    "EM101",
    "EM102",
    "PLR0913",
    "PLR2004",
    "S101",
    "TC001",
    "TC002",
    "TC003",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["INP001"]
"backend/bybit_client/rest.py" = ["C901", "PLC0415"]
"backend/exchange_sync/engine.py" = ["BLE001", "C901", "PERF203", "PLR0912", "PLR0915"]
"backend/exchange_sync/listener.py" = ["PLC0415"]
"backend/main.py" = ["ARG002"]
"backend/market_data/bybit_ws_feed.py" = ["BLE001", "PLC0415"]
"backend/order_executor/executor.py" = ["PLR0915"]
"backend/position_manager/router.py" = ["B008"]
"backend/position_manager/service.py" = ["BLE001"]
"backend/safety_guard/kill_switch.py" = ["BLE001", "PERF203"]
"backend/safety_guard/router.py" = ["B008"]
"backend/signal_loop/runner.py" = ["BLE001"]
"backend/signal_loop/ws_runner.py" = ["BLE001"]
"scripts/*.py" = ["T201"]
"scripts/run_backtest.py" = ["PLC0415", "T201"]
"tests/**/*.py" = ["ARG001", "ARG002", "BLE001", "DTZ011", "INP001", "PLC0415", "S105", "S106", "SLF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
exclude = [
    "tests/.*",
    "alembic/.*",
    "\\.tmp_pytest/.*",
    "pytest_tmp_full/.*",
    "pytest_tmp_full2/.*",
]

[[tool.mypy.overrides]]
module = "pybit.*"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]
